# SPIN-Jam2025

./: Cargo.toml  README.md  build.rs  next_steps.md  project_dump.md
derive/: Cargo.toml
docs/: requirements.md
docs/plans/: physics_core.md  physics_design.md
ecs/: Cargo.toml
ecs/derive/: Cargo.toml
ecs/derive/src/: lib.rs
ecs/derive/tests/: component_pass.rs  trybuild.rs
ecs/src/: lib.rs  query.rs  scheduler.rs  system.rs  world.rs
ecs/tests/: access.rs  core.rs  scheduler.rs
networking/: Cargo.toml
networking/net_derive/: Cargo.toml
networking/net_derive/src/: lib.rs
networking/src/: lib.rs  registry.rs
resources/materials/: test_mat.json
resources/shaders/: fg_main.wgsl  quad_fs.wgsl  quad_vs.wgsl  spin.wgsl  vs_main.wgsl
resources/ui/: menu.json  root.json
src/: client.rs  enemy.rs  input.rs  lib.rs  main.rs  server.rs  statemachine.rs  topdown.rs
src/audio/: mod.rs
src/ecs/: mod.rs  query.rs  scheduler.rs  system.rs  world.rs
src/physics/: mod.rs  test.rs
src/render/: mod.rs  model.rs  sprite.rs  ui.rs
src/spin/: mod.rs  post.rs
src/utils/: input.rs  mod.rs  time.rs
tests/: app.rs  docs.rs  physics.rs  time.rs
