[package]
name = "rust_game_engine"
version = "0.0.0"
edition = "2024"
build = "build.rs"
license = "GPL-3.0-or-later"

[dependencies]
ecs = { path = "ecs" }
networking = { path = "networking" }
bytemuck = "1.23.2"
env_logger = "0.11.8"
image = "0.25.8"
lazy_static = "1.5.0"
pollster = "0.4.0"
serde = { version = "1.0.219", features = ["alloc", "derive", "rc", "std"] }
serde_json = "1.0.143"
wgpu = { version = "25.0.2", features = ["spirv"] }
winit = "0.30.12"
anyhow = "1.0.99"
glam = "0.30.5"
rand = { version = "0.9.2", features = ["thread_rng"] }
tokio = { version = "1.48.0", features = ["full"] }
rodio = { version = "0.21.1", features = [
  "lewton",
  "playback",
], default-features = false }
glyphon = "0.9.0"
fontdb = "0.16.2"

[build-dependencies]
naga = { version = "26.0.0", features = ["wgsl-in", "spv-out"] }

[workspace]
members = ["ecs/derive", "ecs", "networking/net_derive", "networking", "."]

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
